[gd_scene load_steps=11 format=3 uid="uid://0kwbfuwbaeg6"]

[ext_resource type="Script" path="res://npcs/enemies/stalker/enemy_stalker.gd" id="1_kkxas"]
[ext_resource type="Texture2D" uid="uid://6vfinokjdstk" path="res://npcs/enemies/stalker/stalker.png" id="2_iy1t4"]
[ext_resource type="AudioStream" uid="uid://cl3vm0wxcwixm" path="res://npcs/enemies/stalker/stalker_close.mp3" id="3_75nvr"]
[ext_resource type="AudioStream" uid="uid://ba1um47bwqilb" path="res://npcs/enemies/stalker/stalker_attack.wav" id="4_6rx3w"]
[ext_resource type="AudioStream" uid="uid://bng4gpgclwlxp" path="res://npcs/enemies/stalker/stalk_retreat.mp3" id="5_2ryxr"]
[ext_resource type="AudioStream" uid="uid://c3t76n8yyqmjv" path="res://npcs/enemies/distortion_1.mp3" id="6_0e4dp"]
[ext_resource type="Texture2D" uid="uid://bh66e6n7tdwny" path="res://player/star_light.jpg" id="7_2lper"]
[ext_resource type="Script" path="res://npcs/enemies/hitbox.gd" id="8_kgxfw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4hq1m"]
radius = 3.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3qhah"]
radius = 6.0
height = 20.0

[node name="enemy_stalker" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_kkxas")
far_stalk_time_range = Vector2(5, 10)
close_stalk_time_range = Vector2(5, 10)
agitated_stalk_time_range = Vector2(5, 10)

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_iy1t4")

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4hq1m")

[node name="nav_agent" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="close_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="reset_timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="nav_update" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="reset_speed" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="sfx_close" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_75nvr")

[node name="sfx_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6rx3w")
volume_db = 10.0

[node name="sfx_retreat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2ryxr")

[node name="sfx_distortion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0e4dp")
volume_db = 1.0

[node name="eye_left" type="PointLight2D" parent="."]
position = Vector2(-1.5, -6)
enabled = false
color = Color(1, 0, 0, 1)
energy = 2.0
texture = ExtResource("7_2lper")
texture_scale = 0.1

[node name="eye_right" type="PointLight2D" parent="."]
position = Vector2(0.5, -6)
enabled = false
color = Color(1, 0, 0, 1)
energy = 2.0
texture = ExtResource("7_2lper")
texture_scale = 0.1

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 4
script = ExtResource("8_kgxfw")

[node name="col" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_3qhah")

[connection signal="timeout" from="close_timer" to="." method="_on_close_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
[connection signal="timeout" from="nav_update" to="." method="_on_nav_update_timeout"]
[connection signal="timeout" from="reset_speed" to="." method="_on_reset_speed_timeout"]
